<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Main">

    <TextView android:text="@string/media_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_media"
        android:textSize="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#74394255" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_media"
        android:layout_below="@id/text_view_media"
        android:layout_centerHorizontal="true"
        android:src="@drawable/image_media"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forward"
        android:id="@+id/bForward"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:id="@+id/bPause"
        android:layout_alignTop="@+id/bForward"
        android:layout_toRightOf="@+id/bForward"
        android:layout_toEndOf="@+id/bForward" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/bPlay"
        android:layout_alignTop="@+id/bPause"
        android:layout_toLeftOf="@+id/bBack"
        android:layout_toStartOf="@+id/bBack" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/bBack"
        android:layout_alignTop="@+id/bPlay"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_above="@+id/bForward"
        android:layout_toRightOf="@+id/bForward"
        android:layout_toLeftOf="@+id/bBack"
        android:layout_toStartOf="@+id/bBack" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/textView2"
        android:layout_above="@+id/seekBar"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/textView3"
        android:layout_above="@+id/seekBar"
        android:layout_alignRight="@+id/bBack"
        android:layout_alignEnd="@+id/bBack" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textView4"
        android:layout_above="@+id/seekBar"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
